# cardreader

./: .gitignore  Cargo.toml  README.md  cardreader.json
src/: config.rs  main.rs
